--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<!--<![endif]-->
 	<head>
 		<meta charset='utf-8' />
-		<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
 		<title>SMT - Coming Soon</title>	
 		
 		<link rel="shortcut icon" href="favicon.ico" />
@@ -108,7 +107,7 @@
 			</div>
 		</div>
 		
-		<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
+		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
 		<script src="js/jquery.easing.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/jquery.cycle.all.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/jquery.maximage.js" type="text/javascript" charset="utf-8"></script>
